--- a/style.css
+++ b/style.css
@@ -52,3 +52,32 @@ ul li {
 .left button {
   cursor: pointer;
 }
+
+/* CARDS */
+
+section.pickup {
+  display: flex;
+  flex-wrap:wrap;
+  background-color: #f2f0eb;
+  margin: 3rem 2rem 3rem 2rem;
+}
+
+.mobile-img {
+  width: 100%;
+  
+}
+
+.card-1 {
+  display: flex;
+  flex-basis: 50%;
+}
+
+.content {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  align-self: center;
+}
