--- a/style.css
+++ b/style.css
@@ -10,25 +10,91 @@ body {
   font-family: "Source Sans Pro", sans-serif;
 }
 
-
 /* UTILITY CLASSES */
 
-.margin{
+.btn-margin{
+  margin-top:5rem;
+}
+.margin {
   margin: 3rem 2rem 3rem 2rem;
 }
 
-
-.flex-basis{
+.flex-basis {
   flex-basis: 50%;
 }
 
-.img-width
-{
+.img-width {
   width: 100%;
+  height: 100%;
 }
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.hovers:hover {
+  color: #008248;
+}
+
+.bg-pickup {
+  background-color: #f2f0eb;
+}
+
+.bg-discover {
+  background-color: #ebdbc8;
+}
+
+.bg-order-now {
+  background-color: #1e3932;
+}
+
+.bg-uber {
+  background-color: #d4e9e2;
+}
+
+.bg-hunger {
+  background-color: #d4e9e3;
+}
+
+/* BUTTON  */
+
+.btn {
+  line-height: 1.2;
+  cursor: pointer;
+  color: #333;
+  padding: 7px 18px;
+  border-radius: 50px;
+  border-style: solid;
+  border-width: 1px;
+  text-align: center;
+  font-weight: 600;
+  transition: all 0.2s ease;
+}
+
+.btn-black {
+  background-color: #000;
+  border-color: #000;
+  color: #fff;
+}
+
+.btn-white {
+  border-color: rgb(26, 25, 25);
+  background-color: #fff;
+  color: #000;
+}
+
+.btn-border {
+  border-color: rgb(26, 25, 25);
+  color: #000;
+}
+
+.btn-w-text {
+  color: #fff;
+  border-color: #fff;
+}
+
 /* HEADER:----------------------- */
-
-
 
 header {
   padding: 10px 30px;
@@ -40,10 +106,15 @@ nav.navbar {
 }
 
 .navbar .star-logo {
-  width: 77px;
+  width: 57px;
   cursor: pointer;
 }
-
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+}
 ul li {
   text-decoration: none;
   list-style: none;
@@ -67,16 +138,13 @@ ul li {
   align-self: center;
 }
 
-.left button {
-  cursor: pointer;
-}
-
 /* CARDS */
+
+/*------------------ Pickup------------------------- */
 
 section.pickup {
   display: flex;
   flex-wrap: wrap;
-  background-color: #f2f0eb;
 }
 
 .card-1 {
@@ -93,24 +161,36 @@ section.pickup {
   align-self: center;
 }
 
+.content-1 h1 {
+  border: 2px solid;
+  font-size: 30px;
+  font-weight: 900;
+}
+
 /* CARD-2 - DISCOVER */
 
 section.discover {
   display: flex;
-  background-color: #ebdbc8;
 }
 
+/* TERMS AND CONDITIONs */
 
-/* CARD-2 - ORDER-NOW */
+section.terms {
+  text-align: center;
+  font-size: 20px;
+  padding: 50px 100px 160px;
+  border-bottom: 2px solid black;
+}
 
-section.order-now {
-  background-color: #1e3932;
+.bottom p {
+  margin-top: 10rem;
+}
+
+.top {
   display: flex;
+  justify-content: center;
 }
 
-
-/* ORDER NOW-2 */
-
-section.ordernow-2{
-  background-color: #d4e9e2;
+.top p {
+  max-width: 900px;
 }
