media query done

--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   font-family: "Source Sans Pro", sans-serif;
+  /* overflow-x: hidden; */
 }
 
 /* UTILITY CLASSES */
@@ -34,7 +36,6 @@ body {
 
 .flex {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .hovers:hover {
@@ -153,7 +154,6 @@ ul li {
 
 section.pickup {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .card-1 {
@@ -277,7 +277,6 @@ section.about {
   justify-content: space-evenly;
   align-items: center;
   padding: 50px 50px;
- 
 }
 
 /* FOOTER--------------- */
@@ -285,8 +284,7 @@ section.about {
 .footer ul {
   display: inline-flex;
   margin-left: 32px;
-  flex-wrap: wrap;
-  padding-top:10px;
+  padding-top: 10px;
 }
 
 .fab {
@@ -296,4 +294,116 @@ section.about {
 .border {
   margin: 0 4rem;
   border-top: 2px solid;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) 
+
+{
+          section.pickup,
+          section.burgers,
+          section.hunger {
+            display: flex;
+            flex-direction: column;
+            margin: 2rem 0 0 0;
+          }
+
+          section.discover,
+          section.uber {
+            display: flex;
+            flex-direction: column-reverse;
+            margin: 2rem 0 0 0;
+          }
+
+          .style-h1 {
+            font-size: 27px;
+            margin: 1rem;
+          }
+
+          .btn-margin {
+            margin: 2rem 0 2rem;
+          }
+
+          .discover h1 {
+            font-size: 33px;
+            margin: 13px 0 20px;
+          }
+
+          .discover p {
+            font-size: 19px;
+            font-weight: 600;
+            max-width: 332px;
+          }
+
+          .content-3 h1 {
+            font-size: 28px;
+            margin-bottom: 16px;
+            margin-top: 26px;
+          }
+
+          .content-3 p {
+            font-size: 20px;
+            max-width: 300px;
+          }
+
+          .content-4 h1 {
+            font-size: 33px;
+            letter-spacing: 1px;
+            margin: 34px;
+          }
+
+          .content-4 p {
+            font-size: 22px;
+            max-width: 328px;
+          }
+
+          .style-p {
+            font-size: 18px;
+            max-width: 300px;}
+
+
+            section.terms {
+              padding: 20px 26px 0px;
+             
+          }
+
+          .top p , .bottom p {
+            max-width: 300px;
+            line-height: 1.8;
+            font-size: 12.2px;
+        }
+
+
+        .bottom p {
+          margin: 49px 0;
+          
+      }
+
+
+      section.about {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding:0;
+    }
+
+    .footer ul {
+      display: grid;
+      grid-template-columns: repeat(5,1fr);
+      margin-left:8px;
+  }
+
+  .footer ul li{
+    margin:2rem 0 2rem 0;
+  }
+
+    
+
+
+
+
+
+
+
+
 }
